fixes for java target version downgrade